# qkt

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  build.gradle.kts  docker-compose.yml  gradle.properties  mkdocs.yml  qkt.config.yaml.example  requirements-docs.txt  settings.gradle.kts
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  docker.yml  docs.yml  editor.yml  integration.yml  promote-to-main.yml  release.yml  windows-ci.yml  winget.yml
docs/: backlog.md  index.md  logging.md  memory-audit.md  phase2-backlog.md  phase2b-backlog.md  phase3-backlog.md  phase3b-backlog.md  phase4-backlog.md  planned.md  release-process.md
docs/assets/: INTEGRATION.md  extra.css
docs/audits/: 2026-06-07-qkt-codebase-audit-explained.md  2026-06-07-qkt-codebase-audit.md  2026-06-10-full-engine-audit.md
docs/concepts/: architecture.md  backtest-model.md  broker-integration.md  determinism.md  index.md  why-qkt.md
docs/contributing/: adding-a-broker.md  conventions.md  development-setup.md  index.md  kdoc-style.md  phase-workflow.md  stress-tests.md
editor/: README.md
gradle/: libs.versions.toml
overrides/: main.html
pygments_qkt/: pyproject.toml
pygments_qkt/pygments_qkt/: __init__.py
scripts/: deadman-watchdog.sh  fetch-dukascopy.sh  install-hooks.sh  install.ps1  install.sh  precheck.sh
strategies/: README.md
tests/: smoke-install.sh
(+1735 files in other folders)
